# step4-marketplace

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/.claude/skills/: cometchat  cometchat-android-v5  cometchat-android-v5-calls  cometchat-android-v5-features  cometchat-android-v5-production  cometchat-android-v6-compose-customization  cometchat-android-v6-compose-theming  cometchat-android-v6-events  cometchat-android-v6-kotlin-components  cometchat-android-v6-kotlin-placement  cometchat-android-v6-migration  cometchat-android-v6-push  cometchat-android-v6-troubleshooting  cometchat-angular-calls  cometchat-angular-customization  cometchat-angular-features  cometchat-angular-patterns  cometchat-angular-production  cometchat-astro-patterns  cometchat-calls  cometchat-components  cometchat-features  cometchat-flutter-v5  cometchat-flutter-v5-push  cometchat-flutter-v5-testing  cometchat-flutter-v6  cometchat-flutter-v6-calls  cometchat-flutter-v6-conversations  cometchat-flutter-v6-core  cometchat-flutter-v6-customization  cometchat-flutter-v6-events  cometchat-flutter-v6-messages  cometchat-flutter-v6-migration  cometchat-flutter-v6-production  cometchat-flutter-v6-users-groups  cometchat-i18n  cometchat-ios  cometchat-ios-theming  cometchat-native-calls  cometchat-native-expo-patterns  (+5 more)
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py  (+1 more)
backend/tests/: test_health.py
(+214 files in other folders)
